final update before deadline